minor overflow fix

--- a/css/recipes.css
+++ b/css/recipes.css
@@ -68,5 +68,5 @@ p {
   text-shadow: 1px 1px 2px black;
   font-weight: bold;
   font-family: 'Dancing Script', cursive;
-  max-width: 40ch;
+  max-width: 45ch;
 }
